# kernl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  kernl  pyproject.toml
.github/workflows/: ci.yml
akernl/: __init__.py  __main__.py  agent.py  bundle.py  cli.py  compile.py  deploy.py  pool.py  run.py  runtime.py
akernl/adapters/: langchain.py  llama_index.py
docs/: api.md  architecture.md  configuration.md  sdk.md
examples/: bench.agent.py  escape_test.agent.py  hello.agent.py  langchain_agent.py  llama_agent.py  researcher.agent.py
kernl/: __init__.py  __main__.py  agent.py  bundle.py  cli.py  compile.py  deploy.py  pool.py  run.py  runtime.py
kernl/adapters/: langchain.py  llama_index.py
setup/: apparmor-bwrap  install-sandbox.sh
src/: build.py  cgroup.py  log.py  manifest.py  run.py  runtime.py  seccomp.py  worker.py
tests/: conftest.py  test_cli.py  test_compile.py  test_kernl.py  test_observability.py  test_pool.py  test_run.py  test_runtime.py
