[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernl"
version = "0.1.0"
description = "Compile Python AI agents to unikernels, deploy on Firecracker microVMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "unikernel.ai" }]
keywords = ["unikernel", "firecracker", "ai", "agents", "langchain", "llamaindex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://unikernel.ai"
Repository = "https://github.com/unikernel-ai/kernl"

[project.scripts]
kernl = "kernl.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "mypy>=1.10", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["kernl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
