[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akernl"
version = "0.1.0"
description = "Self-hosted sandbox API for AI agent code execution in Firecracker microVMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Cottus AI" }]
keywords = ["sandbox", "firecracker", "ai", "agents", "self-hosted", "microvm", "code-execution", "sandbox-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://cottus-ai.github.io/akernl"
Repository = "https://github.com/cottus-ai/akernl"

[project.scripts]
akernl = "akernl.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "mypy>=1.10", "ruff>=0.4"]
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["akernl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_reexport = false

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
